# client

./: .gitignore  CMakeLists.txt  dllmain.cpp  pch.hpp
.github/workflows/: build.yml
cmake/: CPM.cmake  selaura_resource.cmake
core/: console.cpp  console.hpp  console_sink.hpp  dllmain.cpp  resource.hpp  service_manager.hpp
core/event/: event.hpp  event_manager.hpp
core/renderer/: renderer.cpp  renderer.hpp  shaders.hpp  sui.cpp
core/service/: console.hpp  console_sink.hpp  notification.hpp  notification_manager.cpp  notification_manager.hpp
detail/: type_traits.hpp
loader/: CMakeLists.txt  main.cpp
memory/: detour.hpp  hook.hpp  memory.hpp  patterns.hpp
memory/delayloader/: delayloader.hpp  sdk_parser.py
memory/hooks/: CoreHooks.cpp  CoreHooks.hpp  D3DHooks.cpp  D3DHooks.hpp  InputHooks.cpp  InputHooks.hpp
memory/patterns/: patterns.json
platform/: d3d_common.hpp  entt_clang.hpp  platform.hpp  win32.cpp  win32.hpp
scripts/: patterns.json  sdk_parser.py
sdk/: sdk.cpp  sdk.def  sdk.hpp
sdk/core/: MinecraftGame.hpp  SubClientId.hpp  wndproc.hpp
sdk/import/: basic.cpp  basic.hpp  iat_write.cpp  iat_write.hpp  img_delay_description.cpp  img_delay_description.hpp  importer.cpp  rva_ptr.hpp
sdk/mc/network/: MinecraftPackets.hpp  Packet.hpp
sdk/network/: IPacketHandlerDispatcher.hpp  PacketHandlerDispatcher.hpp
sdk/renderer/: LevelRenderer.hpp  ScreenView.hpp  bgfx.hpp
src/: CMakeLists.txt  pch.hpp
src/core/: dllmain.cpp  service_manager.hpp  win_utils.cpp  win_utils.hpp
src/core/event/: event.hpp  event_manager.hpp
src/core/feature/: feature.cpp  feature.hpp  feature_manager.hpp
src/core/feature/features/: coords.cpp  coords.hpp  keystrokes.cpp  keystrokes.hpp  third_person_nametag.cpp  third_person_nametag.hpp
src/core/renderer/: renderer.cpp  renderer.hpp  renderer_d3d.cpp  renderer_d3d.hpp  renderer_d3d11.cpp  renderer_d3d11.hpp  renderer_d3d12.cpp  renderer_d3d12.hpp  sgfx.cpp  sgfx.hpp  shaders.hpp  shaders_dx.hpp  sui.cpp  sui.hpp  ui.cpp  ui.hpp
src/core/screen/: screen.cpp  screen.hpp  screen_manager.hpp
src/core/screen/screens/: clickgui.cpp  clickgui.hpp  hud_editor.cpp  hud_editor.hpp
src/core/service/: console.cpp  console.hpp  console_sink.hpp  input_manager.cpp  input_manager.hpp
src/io/: logger.hpp
src/load/: main.cpp
src/memory/: cleanup.hpp  hook.hpp  magic_vtable.hpp  memory.hpp  patterns.hpp
src/memory/delayloader/: delayloader.hpp
src/memory/hooks/: CoreHooks.cpp  D3DHooks.cpp  InputHooks.cpp
src/resources/shaders/: shaders.ps.hlsl  shaders.vs.hlsl
src/scripts/: patterns.json  sdk_parser.py
src/sdk/: sdk.def
src/sdk/actor/: Actor.hpp  EntityContext.hpp  LocalPlayer.hpp  Mob.hpp  Player.hpp
src/sdk/actor/components/: IEntityComponent.hpp  MoveInputComponent.hpp  OffsetsComponent.hpp  StateVectorComponent.hpp
src/sdk/actor/ecs/: IEntityComponent.hpp
src/sdk/bedrock/actor/: EntityContext.hpp  LocalPlayer.hpp  Mob.hpp  Player.hpp
src/sdk/bedrock/actor/components/: MoveInputState.hpp
src/sdk/bedrock/actor/ecs/: EntityId.hpp  EntityRegistry.hpp
src/sdk/bedrock/core/: ClientInstance.hpp  MinecraftGame.hpp
src/sdk/bedrock/network/: Packet.hpp
src/sdk/bedrock/network/raknet/: RakNet.hpp  RakPeer.hpp
src/sdk/bedrock/renderer/: ScreenView.hpp  bgfx.hpp
src/sdk/bedrock/renderer/game/: LevelRendererPlayer.hpp
src/sdk/bedrock/renderer/gui/: UIControl.hpp  VisualTree.hpp
src/sdk/core/: ClientInstance.hpp  GameInput_GDK.h  MinecraftGame.hpp
src/sdk/core/actor/: actor.cpp  actor.hpp
src/sdk/network/: IPacketHandlerDispatcher.hpp  MinecraftPackets.hpp  PacketHandlerDispatcher.hpp
src/sdk/renderer/: bgfx.hpp
src/sdk/renderer/gui/: GuiData.hpp  UIControl.hpp
src/sdk/world/: Dimension.hpp
